[Sync] Adjust types to configure during shutdown

When preparing request to server we need to make sure there are update handlers
registered for all types to download. It is possible that configuration cycle
is scheduled with set of types that are later unregistered from
ModelTypeRegistry as part of shutdown. When configuration cycle gets to run
it DCHECKs on types that were requested but later unregistered.

The solution is to detect shutdown condition and adjust types to download.

BUG=683216
R=skym@chromium.org

Review-Url: https://codereview.chromium.org/2718533003
Cr-Commit-Position: refs/heads/master@{#452932}

Former-commit-id: 2010aad1ee6e6b1edfff8e726dbfbea20c2a6ce4